Install babel and use arrow function

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "Leo",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "babel-node index.js"
   }
 }
